Fix prompt echo and sanitize harness logging output
- Filter stepUpdate deltas by source (ignoring SOURCE_USER and SOURCE_SYSTEM deltas) to prevent prompt repetition in response text.
- Route TARGET_ENVIRONMENT action deltas to thoughts rather than user-facing response text.
- Connect currentThoughtsPublisher to reactively stream thinking deltas.
- Change ProcessBuilder error redirection to PIPE and consume stdout/stderr line-by-line via SLF4J, silencing raw Go glog logs from the console.
- Add StepUpdateFilterTest covering source and target delta filtering.
- Update README.md, SKILL.md, and api-reference.md with harness logging configuration and Java 24+ sun.misc.Unsafe JVM options.